# RAS_UMinho

./: .gitignore  README.md  docker-compose.yml  generatejwt.py  package-lock.json  test.py
api-gateway/: .env.example  .gitignore  Dockerfile  README.md  app.js  package-lock.json  package.json
api-gateway/authentication/: authentication.js
api-gateway/authorization/: authorization.js
api-gateway/limiter/: limiter.js
api-gateway/routes/: index.js  logger.js
api-gateway/services/: Users.js  projects.js  subscriptions.js  users.js
api-gateway/utils/: utils.js
auth/: README.md  app.js  package-lock.json
auth-ms/: Dockerfile  README.md  requirements.txt
auth-ms/app/: __init__.py  config.py  router.py
auth-ms/database/: Dockerfile  init.sql
auth/controllers/: user.js
auth/models/: user.js
auth/routes/: user.js
picturas/: Dockerfile  README.md  index.html  package-lock.json  package.json  vite.config.js
picturas-bezel-tool-ms/: .env.example  Dockerfile
picturas-bezel-tool-ms/picturas_bezel_tool_ms/: bezel_request_message.py  bezel_result_message.py  bezel_tool.py  config.py  main.py
picturas-binarization-tool-ms/: .env.example  Dockerfile
picturas-brightness-contrast-ms/: .env.example  Dockerfile  pyproject.toml
picturas-brightness-contrast-ms/picturas_resize_tool_ms/: brightness_contrast_request_message.py  brightness_contrast_result_message.py  brightness_contrast_tool.py  config.py
picturas-brightness-contrast-ms/usage_example/: docker-compose.yml
picturas-brightness-contrast-ms/usage_example/request_mocker/: main.py
picturas-brightness-tool-ms/: .env.example  Dockerfile  README.md
picturas-grayscale-tool-ms/: .env.example  Dockerfile  pyproject.toml
picturas-ocr-tool-ms/: .env.example  Dockerfile  README.md  pyproject.toml
picturas-ocr-tool-ms/picturas_ocr_tool_ms/: config.py  main.py  ocr_request_message.py  ocr_result_message.py  ocr_tool.py
picturas-ocr-tool-ms/picturas_ocr_tool_ms/core/: message_queue_setup.py
picturas-ocr-tool-ms/usage_example/: docker-compose.yml
picturas-removebg-tool-ms/: .env.example  Dockerfile  pyproject.toml
picturas-resize-tool-ms/: Dockerfile  pyproject.toml
picturas-resize-tool-ms/picturas_resize_tool_ms/: config.py  main.py  resize_request_message.py  resize_tool.py
picturas-resize-tool-ms/usage_example/: docker-compose.yml
picturas-rotation-tool-ms/: .env.example  Dockerfile  pyproject.toml
picturas-watermark-tool-ms/: Dockerfile
picturas/src/: App.css  App.jsx  main.jsx
project-ms/: Dockerfile  README.md
queue/: main.py
subscriptions-ms/: .env.example  .gitignore  Dockerfile  README.md  app.js  package-lock.json  package.json
(+94 files in other folders)
