[tool.poetry]
name = "picturas-resize-tool-ms"
version = "0.1.0"
description = "PictuRAS microservice (tool) that applies a resize to an input image, generating a new output image with the specified size."
authors = ["Ricardo Pereira <pg56001@alunos.di.uminho.pt>", "Diogo Araujo <pg55935@alunos.di.uminho.pt>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pika = "^1.3.2"
pydantic = "^2.10.3"
pillow = "^11.0.0"
poetry = "^2.0.0"


[tool.poetry.group.dev.dependencies]
yapf = "^0.43.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
